<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/adminhomelayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kidsy.MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/adminhomenav"
        app:headerLayout="@layout/header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:itemTextColor="@color/dark"
        app:itemIconTint="@color/dark"
        app:menu="@menu/admindrawermenu"
        android:layout_gravity="start"
        >

    </com.google.android.material.navigation.NavigationView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <LinearLayout

                android:id="@+id/homelayout21"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/ausers"
                android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="order"
                android:id="@+id/pay"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/homelayout22"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/homebtnusers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/ausers"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold">


                </Button>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/homelayout23"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

            </LinearLayout>


            <LinearLayout

                android:id="@+id/homelayout3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/abooks"
                android:orientation="vertical">



            </LinearLayout>
            <LinearLayout
                android:id="@+id/homelayout4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/homebtnbooks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/abooks"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold">


                </Button>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/homelayout5"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout

                android:id="@+id/homelayout6"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/anews"
                android:orientation="vertical">


            </LinearLayout>
            <LinearLayout
                android:id="@+id/homelayout7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/homebtnnewspapers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/anews"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold">


                </Button>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/homelayout8"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout

                android:id="@+id/homelayout9"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/aenter"
                android:orientation="vertical">



            </LinearLayout>
            <LinearLayout
                android:id="@+id/homelayout10"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/homebtnentertainment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/aenter"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold">


                </Button>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/homelayout14"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

            </LinearLayout>
            <LinearLayout

                android:id="@+id/homelayout15"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/apayments"
                android:orientation="vertical">



            </LinearLayout>
            <LinearLayout
                android:id="@+id/homelayout16"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/homebtnpayments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/apayments"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold">


                </Button>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/homelayout17"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

            </LinearLayout>
            <LinearLayout

                android:id="@+id/homelayout18"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/adelivers"
                android:orientation="vertical">



            </LinearLayout>
            <LinearLayout
                android:id="@+id/homelayout19"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/homebtndelivers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/adelivers"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold">


                </Button>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/homelayout20"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>