<resources>
    <string name="app_name">KIDSY</string>
    <string name="home">Online Learing And Entertainment </string>
    <string name="hopen">Open</string>
    <string name="hclose">Close</string>
    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="homebtnbooks">Books</string>
    <string name="homebtnnewspapers">News Papers</string>
    <string name="homebtnentertainment">Entertainment</string>
    <string name="homebtnorders">My Orders</string>
    <string name="buybook">Buy Book</string>
    <string name="buyquantity">Enter Quantity</string>
    <string name="buynow">Buy Now</string>
    <string name="buycancel">Cancel</string>
    <string name="buynowbtncheck">Checkout</string>
    <string name="buynowbtncancel">Cancel</string>
    <string name="newspapers">Choose a Category</string>
    <string name="gradebtn15">Grade 1-5 </string>
    <string name="gradebtn611">Grade 6 - 11</string>
    <string name="gradebtn1213">Grade 12 - 13</string>
    <string name="othersbtn">Others</string>
    <string name="articlesbtn">Articles</string>
    <string name="newspapername1">News Paper Name</string>
    <string name="grade611">Grade 6 - 11</string>
    <string name="newspaperreadnow">READ NOW</string>
    <string name="grade15">Grade 1 - 5</string>
    <string name="grade1213">Grade 12 - 13</string>
    <string name="others">Others</string>
    <string name="articles">Articles</string>
    <string name="readnow">Read Now</string>
    <string name="updatenewspaper">Update Newspaper Details</string>
    <string name="newspapername">News Paper Name</string>
    <string name="paymentinfo">Payment Details</string>
    <string name="payid">Payment ID</string>
    <string name="payaddress">Shipping Address</string>
    <string name="payfirstname">Cutomer Name</string>
    <string name="payemail">Email</string>
    <string name="payconfirm">Confirm above informations</string>
    <string name="paycardnumber">Credit Card Number</string>
    <string name="paycardowner">Card Owners Name</string>
    <string name="paycardexpiredate">Creit Card expire date</string>
    <string name="paybookname">Book Name</string>
    <string name="paybookqty">Number of books</string>
    <string name="paytotalprice">Total Payment</string>
    <string name="paydate">Payment Date</string>
    <string name="paycomplete">Complete Payment</string>
    <string name="rpayid">Payment ID</string>
    <string name="deliver">Deliver Books</string>
    <string name="deliverinfo">Deliver Details</string>
    <string name="delid">Deliver ID</string>
    <string name="orderid">Order ID</string>
    <string name="deliveraddress">Delivery Address</string>
    <string name="deladdress">Deliver Address</string>
    <string name="delzip">Zip Code</string>
    <string name="delemail">Customer Email</string>
    <string name="delfirst">Customer Name</string>
    <string name="deldate">Deliver Date</string>
    <string name="delivered">Complete Delivery</string>
    <string name="myorders">My Orders</string>
    <string name="updatepaymentinfo">Update Payment Informations</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delivermanage">Deliver Books</string>
    <string name="readmanage">Deliver Details</string>
    <string name="ausers">User Management</string>
    <string name="abooks">Book Management</string>
    <string name="anews">NewsPaper Management</string>
    <string name="aenter">Entertainment Management</string>
    <string name="apayments">Payments Management</string>
    <string name="adelivers">Delivery Management</string>


    <string name="image">Image</string>
    <string name="addnewspaper">Add News Paper</string>
    <string name="kidsyp">0712334221</string>
    <string name="kidsye">Kidsy@gmail.com</string>
    <string name="contact_us">Contact Us</string>
    <string name="users">dashusers</string>
    <string name="dashpayments">Payments</string>
    <string name="dashdelivers">Delivers</string>


</resources>